[gd_scene load_steps=26 format=3 uid="uid://d08hy8m7ysx30"]

[ext_resource type="Script" path="res://src/date/DateMinigameDisplay.gd" id="1_kynup"]
[ext_resource type="Texture2D" uid="uid://xvtogj4lsibc" path="res://data/assets/date/art/transparent_black_rounded_rect_8px9patch.png" id="2_4gai5"]
[ext_resource type="FontFile" uid="uid://im85rm1hu4m8" path="res://data/assets/general/art/PoetsenOne-Regular.ttf" id="3_j5wfl"]
[ext_resource type="Texture2D" uid="uid://bs2uwidb2e6jk" path="res://data/assets/date/art/prog_bw_small.png" id="8_m04k3"]
[ext_resource type="Texture2D" uid="uid://p6047m5y4bi1" path="res://data/assets/date/art/prog_color_small.png" id="9_ptp1w"]
[ext_resource type="Texture2D" uid="uid://cjkjnha4lmk6j" path="res://data/assets/date/art/shapes_overlay.png" id="11_11fku"]
[ext_resource type="Texture2D" uid="uid://cnylctgjlemhw" path="res://data/assets/date/art/business_bar_small.png" id="14_me0q0"]
[ext_resource type="Texture2D" uid="uid://cswkjttqs3smc" path="res://data/assets/date/art/love_bar_small.png" id="15_1ev88"]
[ext_resource type="Texture2D" uid="uid://di0oxc8ycgfyr" path="res://data/assets/date/art/business_progress.png" id="15_oniku"]
[ext_resource type="PackedScene" uid="uid://btcjk44b37saf" path="res://src/date/progress_bar_with_particle.tscn" id="16_3o1s3"]
[ext_resource type="Texture2D" uid="uid://j7t74j12ve5l" path="res://data/assets/date/art/love_progress.png" id="17_ebgjr"]
[ext_resource type="AudioStream" uid="uid://dx18wh0d67qhi" path="res://data/assets/general/sounds/tone4.wav" id="18_1y40a"]
[ext_resource type="AudioStream" uid="uid://cu5y7ae0pqsdg" path="res://data/assets/general/sounds/sound.wav" id="19_hrdnt"]
[ext_resource type="PackedScene" uid="uid://deu30lvoriam7" path="res://src/date/emoji_display.tscn" id="20_fod8x"]
[ext_resource type="PackedScene" uid="uid://blrodu2nk43sr" path="res://src/date/date_complete_display.tscn" id="21_ahp8f"]
[ext_resource type="PackedScene" uid="uid://bfeftrw0tevxh" path="res://src/date/date_choice_display.tscn" id="21_q58u0"]
[ext_resource type="PackedScene" uid="uid://bh8m4ecp5otgq" path="res://src/date/date_select_display.tscn" id="22_6k5wn"]

[sub_resource type="Animation" id="Animation_omclh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../OverlayClipper/Overlay:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(204, -23)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../DateCompleteDisplay:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(178, 1198)]
}

[sub_resource type="Animation" id="Animation_n5i6b"]
resource_name = "date_success_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../DateCompleteDisplay:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(178, 1198), Vector2(178, 120)]
}

[sub_resource type="Animation" id="Animation_ory2i"]
resource_name = "overlay_move"
length = 18.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../OverlayClipper/Overlay:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(24, 165), Vector2(439, -126)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_25uq3"]
_data = {
"RESET": SubResource("Animation_omclh"),
"date_success_in": SubResource("Animation_n5i6b"),
"overlay_move": SubResource("Animation_ory2i")
}

[sub_resource type="Animation" id="Animation_mnoo1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IntroBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(923, 406)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IntroText:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-894, 406)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IntroTextTopBox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-419, 12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OverlayClipper/Overlay:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(204, 27)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DateProgress:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(406, 12)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("IntroBox:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(933, 16)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("IntroBox:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_f2b8l"]
resource_name = "intro_in"
length = 3.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IntroBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(923, 406), Vector2(-27, 406), Vector2(-19, 406)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IntroText:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-894, 406), Vector2(-133, 406), Vector2(93, 406), Vector2(800, 406)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IntroTextTopBox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.7, 3.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-419, 12), Vector2(13, 12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DateProgress:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.7, 3.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(932, 12), Vector2(406, 12)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("IntroBox:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.3, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(933, 200), Vector2(933, 200), Vector2(933, 16)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("IntroBox:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g24rx"]
_data = {
"RESET": SubResource("Animation_mnoo1"),
"intro_in": SubResource("Animation_f2b8l")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4etdm"]
bg_color = Color(0.160173, 0.722634, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="DateMinigameDisplay" type="Node2D"]
script = ExtResource("1_kynup")

[node name="DateProgress" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
offset_left = 406.0
offset_top = 12.0
offset_right = 885.001
offset_bottom = 67.0
texture_under = ExtResource("8_m04k3")
texture_progress = ExtResource("9_ptp1w")

[node name="OverlayClipper" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 410.0
offset_top = 16.0
offset_right = 410.0
offset_bottom = 62.0

[node name="Overlay" type="Sprite2D" parent="OverlayClipper"]
position = Vector2(204, 27)
scale = Vector2(0.8875, 0.725)
texture = ExtResource("11_11fku")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="IntroTextTopBox" type="NinePatchRect" parent="."]
offset_left = -419.0
offset_top = 12.0
offset_right = -39.0
offset_bottom = 66.0
texture = ExtResource("2_4gai5")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="IntroTextTop" type="Label" parent="IntroTextTopBox"]
layout_mode = 0
offset_top = -1.0
offset_right = 380.0
offset_bottom = 54.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("3_j5wfl")
theme_override_font_sizes/font_size = 30
text = "First Date With Lisa"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="IntroBox" type="NinePatchRect" parent="."]
offset_left = 923.0
offset_top = 406.0
offset_right = 1856.0
offset_bottom = 422.0
texture = ExtResource("2_4gai5")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="IntroText" type="Label" parent="."]
offset_left = -894.0
offset_top = 406.0
offset_right = -11.0
offset_bottom = 604.0
theme_override_fonts/font = ExtResource("3_j5wfl")
theme_override_font_sizes/font_size = 55
text = "First Date With Lisa"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
libraries = {
"": SubResource("AnimationLibrary_25uq3")
}
autoplay = "overlay_move"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g24rx")
}

[node name="BarBg" type="NinePatchRect" parent="."]
offset_left = 757.0
offset_top = 891.0
offset_right = 891.0
offset_bottom = 1147.0
texture = ExtResource("2_4gai5")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="BarBg2" type="NinePatchRect" parent="."]
offset_left = 757.0
offset_top = 855.0
offset_right = 891.0
offset_bottom = 890.0
texture = ExtResource("2_4gai5")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="BusinessBar" parent="." instance=ExtResource("16_3o1s3")]
position = Vector2(760, 891)
texture = ExtResource("14_me0q0")
particle = ExtResource("15_oniku")
particle_color = Color(0.299968, 0.511606, 1, 1)
spawn_sound = ExtResource("18_1y40a")
collect_sound = ExtResource("19_hrdnt")

[node name="LoveBar" parent="." instance=ExtResource("16_3o1s3")]
position = Vector2(824, 891)
texture = ExtResource("15_1ev88")
particle = ExtResource("17_ebgjr")
particle_color = Color(0.937873, 0.00112568, 0.994281, 1)
spawn_sound = ExtResource("18_1y40a")
collect_sound = ExtResource("19_hrdnt")

[node name="DateCompleteDisplay" parent="." instance=ExtResource("21_ahp8f")]
position = Vector2(178, 1198)

[node name="DateChoiceDisplay" parent="." instance=ExtResource("21_q58u0")]
unique_name_in_owner = true

[node name="DateSelectDisplay" parent="." instance=ExtResource("22_6k5wn")]
unique_name_in_owner = true

[node name="EmojiDisplay" parent="." instance=ExtResource("20_fod8x")]
unique_name_in_owner = true
visible = false
position = Vector2(827, 798)
scale = Vector2(0.45, 0.45)

[node name="AnnoyanceBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = 762.0
offset_top = 859.0
offset_right = 887.0
offset_bottom = 886.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_4etdm")
step = 1.0
value = 20.0
show_percentage = false

[node name="AnnoyanceLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 762.0
offset_top = 858.0
offset_right = 887.0
offset_bottom = 887.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_j5wfl")
theme_override_font_sizes/font_size = 22
text = "Annoyed"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="clicked_continue" from="DateCompleteDisplay" to="." method="_on_date_complete_display_clicked_continue"]
[connection signal="back_button" from="DateChoiceDisplay" to="." method="_on_date_choice_display_back_button"]
[connection signal="choice_selected" from="DateChoiceDisplay" to="." method="_on_date_choice_display_choice_selected"]
[connection signal="choice_selected" from="DateSelectDisplay" to="." method="_on_date_select_display_choice_selected"]
[connection signal="skip_date_selected" from="DateSelectDisplay" to="." method="_on_date_select_display_skip_date_selected"]
